--- a/main.html
+++ b/main.html
@@ -1,16 +1,153 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Assignment 3</title>
+    <style>
+        table {
+            border: 1px solid black;
+            border-spacing: 1px;
+            padding: 1px;
+            width: 80%;
+            margin: 20px auto;
+        }
+
+        .middle {
+            margin: 20px auto;
+            width: 80%;
+        }
+
+        .center {
+            text-align: center;
+        }
+
+        .right {
+            text-align: right;
+        }
+
+        .green {
+            background-color: green;
+            color: white;
+        }
+
+        .blue {
+            background-color: blue;
+            color: white;
+        }
+
+        td, th {
+            padding: 10px;
+            border: 1px solid black;
+        }
+
+        img {
+            width: 100%;
+            max-width: 150px;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1 style="text-align: center;">HTML Assignment #3</h1>
 
+    <!-- Table 1 -->
+    <h2>Table 1: 3 Rows, 3 Columns</h2>
+    <table class="middle" id="table-1">
+        <tr>
+            <td id="t11">Cell 1</td>
+            <td id="t12">Cell 2</td>
+            <td id="t13">Cell 3</td>
+        </tr>
+        <tr class="center">
+            <td colspan="3">Middle Row - Centered</td>
+        </tr>
+        <tr class="right">
+            <td>Cell 4</td>
+            <td>Cell 5</td>
+            <td>Cell 6</td>
+        </tr>
+    </table>
+
+    <!-- Table 2 -->
+    <h2>Table 2: 6 Rows, 6 Columns (Colspan in First Row)</h2>
+    <table class="middle" id="table-2">
+        <tr>
+            <td id="t21" colspan="6" class="center">First Row - Single Cell, Colspan 6</td>
+        </tr>
+        <tr>
+            <td>Row 2, Cell 1</td>
+            <td>Row 2, Cell 2</td>
+            <td>Row 2, Cell 3</td>
+            <td>Row 2, Cell 4</td>
+            <td>Row 2, Cell 5</td>
+            <td>Row 2, Cell 6</td>
+        </tr>
+        <tr>
+            <td>Row 3, Cell 1</td>
+            <td>Row 3, Cell 2</td>
+            <td>Row 3, Cell 3</td>
+            <td>Row 3, Cell 4</td>
+            <td>Row 3, Cell 5</td>
+            <td>Row 3, Cell 6</td>
+        </tr>
+        <tr>
+            <td>Row 4, Cell 1</td>
+            <td>Row 4, Cell 2</td>
+            <td>Row 4, Cell 3</td>
+            <td>Row 4, Cell 4</td>
+            <td>Row 4, Cell 5</td>
+            <td>Row 4, Cell 6</td>
+        </tr>
+        <tr>
+            <td>Row 5, Cell 1</td>
+            <td>Row 5, Cell 2</td>
+            <td>Row 5, Cell 3</td>
+            <td>Row 5, Cell 4</td>
+            <td>Row 5, Cell 5</td>
+            <td>Row 5, Cell 6</td>
+        </tr>
+        <tr>
+            <td>Row 6, Cell 1</td>
+            <td>Row 6, Cell 2</td>
+            <td>Row 6, Cell 3</td>
+            <td>Row 6, Cell 4</td>
+            <td>Row 6, Cell 5</td>
+            <td>Row 6, Cell 6</td>
+        </tr>
+    </table>
+
+    <!-- Table 3 -->
+    <h2>Table 3: Includes an Image and Colored Rows</h2>
+    <table class="middle" id="table-3">
+        <tr class="green">
+            <td colspan="5">First Row - Green Background</td>
+        </tr>
+        <tr>
+            <td>Row 2, Cell 1</td>
+            <td>Row 2, Cell 2</td>
+            <td id="t-image">
+                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+            </td>
+            <td>Row 2, Cell 4</td>
+            <td>Row 2, Cell 5</td>
+        </tr>
+        <tr>
+            <td>Row 3, Cell 1</td>
+            <td>Row 3, Cell 2</td>
+            <td>Row 3, Cell 3</td>
+            <td>Row 3, Cell 4</td>
+            <td>Row 3, Cell 5</td>
+        </tr>
+        <tr>
+            <td>Row 4, Cell 1</td>
+            <td>Row 4, Cell 2</td>
+            <td>Row 4, Cell 3</td>
+            <td>Row 4, Cell 4</td>
+            <td>Row 4, Cell 5</td>
+        </tr>
+        <tr class="blue">
+            <td colspan="5">Last Row - Blue Background</td>
+        </tr>
+    </table>
 </body>
-
 </html>
